# Pytucky

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/api/: best-practices.md  exceptions.md  index.md  models.md  query.md  session.md  storage.md
docs/changelog/: 1.0.0.md  1.1.1.md  1.1.2.md
docs/guide/: benchmark.md  development.md
pytucky/: __init__.py
pytucky/backends/: __init__.py  backend_binary.py  backend_pytucky.py  backend_pytucky_v6.py  backend_pytucky_v7_adapter.py  base.py  format.py  format_v7.py  index.py  index_v7.py  migrate_p5_to_p6.py  migrate_p5_to_p7.py  pager.py  registry.py  schema_v6.py  store.py  store_v7.py  versions.py
pytucky/common/: __init__.py  crypto.py  exceptions.py  options.py  typing.py  utils.py
pytucky/core/: __init__.py  event.py  index.py  orm.py  prefetch.py  session.py  storage.py  types.py
pytucky/query/: __init__.py  builder.py  compiler.py  result.py  statements.py
tests/: __init__.py  conftest.py  test_backend_pytucky_v6.py
tests/benchmark/: bench_p2.py  benchmark.py  test_benchmark_runner.py
tests/feature/: test_api_contract.py  test_api_contract_v7.py  test_helpers_smoke.py  test_migrate_p5_to_p7.py  test_mypy_typecheck.py  test_ptk6_smoke.py  test_ptk7_encryption.py  test_relationship.py  test_session_advanced.py  test_storage_active_record.py  test_storage_basic.py  test_storage_indexes.py  test_storage_lazy_load.py  test_storage_query.py  test_storage_query_fastpath.py  test_storage_query_table_data.py  test_storage_schema.py  test_storage_session.py  test_storage_thread_safety.py
tests/helpers/: __init__.py  assertions.py  data_sets.py  factories.py  matrix.py  pytuck_compat.py  recovery.py
tests/recovery/: test_ptk6_corruption_truncation.py  test_ptk6_journal_recovery.py
tests/system/: test_ptk6_matrix.py  test_ptk7_cross_library_compat.py
tests/unit/: test_backend_pytucky_probe.py  test_backend_pytucky_v6_probe.py  test_backend_pytucky_v7_probe.py  test_builder.py  test_event.py  test_exceptions.py  test_format.py  test_format_v7.py  test_index.py  test_index_materialization.py  test_index_v7.py  test_options.py  test_orm_column.py  test_pager.py  test_ptk7_format_encryption.py  test_ptk7_store_encryption.py  test_pytuck_compat_helper.py  test_schema_v6.py  test_statements.py  test_storage_query_table_data_backend.py  test_store.py  test_store_index.py  test_store_v7.py  test_store_v7_index.py  test_types.py
